[package]
name = "ramen"
version = "0.0.1"
authors = ["viri <hi@viri.moe>"]
edition = "2018"

[dependencies]
parking_lot = { optional = true, version = "0.11" }

[features]
default = ["input"]
input = []
nightly-docs = []
parking-lot = ["parking_lot"]

[package.metadata.docs.rs]
features = ["nightly-docs"]
